# embedded_project

./: CMakeLists.txt  FreeRTOSConfig.h  hc_sr04.cpp  hc_sr04.h  infrared_sensor.c  infrared_sensor.h  led_lamp.cpp  led_lamp.h  microphone.h  motor.h  nano.cpp  servo.cpp  servo.h  ultrasonic.cpp  ultrasonic.h
lib/FreeRTOS-Kernel/portable/IAR/RX600/: readme.txt:Zone.Identifier
src/: CMakeLists.txt  infrared_sensor.c  microphone.cpp  motor.cpp  nano.cpp
